bindings/RosuFFI.h

typedef struct Difficulty Difficulty;
typedef struct Performance Performance;
typedef struct BeatmapAttributesBuilder BeatmapAttributesBuilder;
typedef struct Mods Mods;
typedef struct Beatmap Beatmap;
typedef uint64_t Version;
void beatmap_attributes_builder_cs(BeatmapAttributesBuilder * instance, float cs);
void difficulty_ar(Difficulty * instance, float ar);
void performance_n100(Performance * instance, uint32_t n100);
float beatmap_od(Beatmap * instance);
void difficulty_i_mods(Difficulty * instance, uint32_t mods);
Version __api_guard(void);
void mods_clear(Mods * instance);