JavaRosuPP/src/main/java/desu/life/raw/RosuNative.java


    private static class beatmap_attributes_builder_cs {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            RosuNative.C_FLOAT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("beatmap_attributes_builder_cs").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void beatmap_attributes_builder_cs(BeatmapAttributesBuilder *instance, float cs)
     * }
     */
    public static FunctionDescriptor beatmap_attributes_builder_cs$descriptor() {
        return beatmap_attributes_builder_cs.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void beatmap_attributes_builder_cs(BeatmapAttributesBuilder *instance, float cs)
     * }
     */
    public static MethodHandle beatmap_attributes_builder_cs$handle() {
        return beatmap_attributes_builder_cs.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void beatmap_attributes_builder_cs(BeatmapAttributesBuilder *instance, float cs)
     * }
     */
    public static MemorySegment beatmap_attributes_builder_cs$address() {
        return beatmap_attributes_builder_cs.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void beatmap_attributes_builder_cs(BeatmapAttributesBuilder *instance, float cs)
     * }
     */
    public static void beatmap_attributes_builder_cs(MemorySegment instance, float cs) {
        var mh$ = beatmap_attributes_builder_cs.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("beatmap_attributes_builder_cs", instance, cs);
            }
            mh$.invokeExact(instance, cs);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class difficulty_ar {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            RosuNative.C_FLOAT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("difficulty_ar").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void difficulty_ar(Difficulty *instance, float ar)
     * }
     */
    public static FunctionDescriptor difficulty_ar$descriptor() {
        return difficulty_ar.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void difficulty_ar(Difficulty *instance, float ar)
     * }
     */
    public static MethodHandle difficulty_ar$handle() {
        return difficulty_ar.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void difficulty_ar(Difficulty *instance, float ar)
     * }
     */
    public static MemorySegment difficulty_ar$address() {
        return difficulty_ar.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void difficulty_ar(Difficulty *instance, float ar)
     * }
     */
    public static void difficulty_ar(MemorySegment instance, float ar) {
        var mh$ = difficulty_ar.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("difficulty_ar", instance, ar);
            }
            mh$.invokeExact(instance, ar);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class performance_n100 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            RosuNative.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("performance_n100").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void performance_n100(Performance *instance, uint32_t n100)
     * }
     */
    public static FunctionDescriptor performance_n100$descriptor() {
        return performance_n100.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void performance_n100(Performance *instance, uint32_t n100)
     * }
     */
    public static MethodHandle performance_n100$handle() {
        return performance_n100.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void performance_n100(Performance *instance, uint32_t n100)
     * }
     */
    public static MemorySegment performance_n100$address() {
        return performance_n100.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void performance_n100(Performance *instance, uint32_t n100)
     * }
     */
    public static void performance_n100(MemorySegment instance, int n100) {
        var mh$ = performance_n100.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("performance_n100", instance, n100);
            }
            mh$.invokeExact(instance, n100);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class beatmap_od {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            RosuNative.C_FLOAT,
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("beatmap_od").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * float beatmap_od(Beatmap *instance)
     * }
     */
    public static FunctionDescriptor beatmap_od$descriptor() {
        return beatmap_od.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * float beatmap_od(Beatmap *instance)
     * }
     */
    public static MethodHandle beatmap_od$handle() {
        return beatmap_od.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * float beatmap_od(Beatmap *instance)
     * }
     */
    public static MemorySegment beatmap_od$address() {
        return beatmap_od.ADDR;
    }

    /**
     * {@snippet lang=c :
     * float beatmap_od(Beatmap *instance)
     * }
     */
    public static float beatmap_od(MemorySegment instance) {
        var mh$ = beatmap_od.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("beatmap_od", instance);
            }
            return (float)mh$.invokeExact(instance);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class difficulty_i_mods {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            RosuNative.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("difficulty_i_mods").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void difficulty_i_mods(Difficulty *instance, uint32_t mods)
     * }
     */
    public static FunctionDescriptor difficulty_i_mods$descriptor() {
        return difficulty_i_mods.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void difficulty_i_mods(Difficulty *instance, uint32_t mods)
     * }
     */
    public static MethodHandle difficulty_i_mods$handle() {
        return difficulty_i_mods.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void difficulty_i_mods(Difficulty *instance, uint32_t mods)
     * }
     */
    public static MemorySegment difficulty_i_mods$address() {
        return difficulty_i_mods.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void difficulty_i_mods(Difficulty *instance, uint32_t mods)
     * }
     */
    public static void difficulty_i_mods(MemorySegment instance, int mods) {
        var mh$ = difficulty_i_mods.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("difficulty_i_mods", instance, mods);
            }
            mh$.invokeExact(instance, mods);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class __api_guard {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            RosuNative.C_LONG    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("__api_guard").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * Version __api_guard()
     * }
     */
    public static FunctionDescriptor __api_guard$descriptor() {
        return __api_guard.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * Version __api_guard()
     * }
     */
    public static MethodHandle __api_guard$handle() {
        return __api_guard.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * Version __api_guard()
     * }
     */
    public static MemorySegment __api_guard$address() {
        return __api_guard.ADDR;
    }

    /**
     * {@snippet lang=c :
     * Version __api_guard()
     * }
     */
    public static long __api_guard() {
        var mh$ = __api_guard.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("__api_guard");
            }
            return (long)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mods_clear {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("mods_clear").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void mods_clear(Mods *instance)
     * }
     */
    public static FunctionDescriptor mods_clear$descriptor() {
        return mods_clear.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void mods_clear(Mods *instance)
     * }
     */
    public static MethodHandle mods_clear$handle() {
        return mods_clear.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void mods_clear(Mods *instance)
     * }
     */
    public static MemorySegment mods_clear$address() {
        return mods_clear.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void mods_clear(Mods *instance)
     * }
     */
    public static void mods_clear(MemorySegment instance) {
        var mh$ = mods_clear.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mods_clear", instance);
            }
            mh$.invokeExact(instance);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
